--- a/commitment/src/main/resources/application.properties
+++ b/commitment/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-
+#基本配置
+spring.datasource.url=jdbc:mysql://119.28.177.242:3306/commitment?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Gnefiah@016
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#使用mysql
+spring.jpa.database = mysql
+#是否显示sql语句
+spring.jpa.show-sql=true
+#mybatis配置 mybatis.config-location=classpath:mybatis-config.xml // 配置文件位置
+mybatis.typeAliasesPackage=online.selfexpansion.commitment.model
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
